style.css
body {
  font-family: 'Lato', sans-serif;
  width: 100%;
  margin: 0;
  padding: 0;
}
h2, h3 {
  margin: 0;
}
h2 {
  font-size: 30px;
  color: #666d89;
  font-weight: 900;
  letter-spacing: -0.2px;
}
header {
  background-color: #2d303a;
  border-bottom: 6px solid #323746;
}
.header-inner {
  width: 1020px;
  height: 89px;
  padding: 0 40px;
  margin: auto;
  display: flex;
  color: #ffffff;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
}
.logo h1{
  font-size: 25px;
  font-weight: 700;
  letter-spacing: -0.5px;
}
.logo span {
  font-weight: normal;
  color: #f06c64;
}
nav {
  font-size: 12px;
}
ul {
  display: flex;
  padding-top: 10px;
  list-style: none;
}
nav li {
  margin-left: 13px;
  letter-spacing: -0.3px;
  cursor: pointer;
  transition: linear 0.2s;
}
nav li:hover {
  color: #f06c64;
}
nav li:before {
  content: "\00B7 ";
  color: #494e62;
  margin-right: 15px;
  font-weight: bold;
}
nav li:first-child:before {
  display: none;
}
.slider {
  width: 100%;
  background-color: #f06c64;
  height: 595px;
  border-bottom: 5px solid #ea676b;
}
.slider-inner {
  width: 1020px;
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  padding: 0 40px;
  box-sizing: border-box;
}
.vertical-phone {
  position: relative;
  left: -103px;
  top: -15px;
}
.horizontal-phone {
  position: relative;
  left: -44px;
  top: -16px;
}
.vertical-phone .phone-content {
  position: absolute;
  height: 333px;
  width: 188px;
  background: url("assets/content-vertical.svg");
  background-position: 566px -135px;
  margin-top: 66px;
  margin-left: 16px;
  z-index: 2;
}
.horizontal-phone .phone-content {
  position: absolute;
  height: 189px;
  width: 334px;
  background: url("assets/content-horizontal.svg");
  background-position: 456px 461px;
  margin-top: 137px;
  margin-left: -60px;
  z-index: 2;
}
.vertical-phone .iphone {
  position: relative;
  z-index: 1;
}
.horizontal-phone .iphone {
  position: relative;
  z-index: 1;
  transform: rotate(90deg);
}
.vertical-phone .shadow {
  transform: scale(1, -1) rotate(90deg);
  z-index: 0;
  position: absolute;
  margin-top: -338px;
  margin-left: -119px;
}
.horizontal-phone .shadow {
  position: absolute;
  margin-top: -338px;
  margin-left: -118px;
}
.slider-inner img {
  display: block;
}
.arrow-right img{
  transform: rotate(180deg);
}
.arrow-right, .arrow-left {
  cursor: pointer;
  opacity: 1;
  margin-top: -6px; /*pixel perfect only*/
}
.arrow-right:hover, .arrow-left:hover{
  opacity: 0.5;
}
.services {
  width: 100%;
  height: 494px;
  background-color: #f2f2f2;
  border-bottom: 6px solid #ffffff;
}
.services-inner {
  width: 1020px;
  margin: auto;
  padding: 59px 40px 0 40px;
  box-sizing: border-box;
}
.services-wrapper {
  display: flex;
  margin-top: 46px;
  flex-wrap: wrap;
  justify-content: space-between;
}
.services-item {
  display: flex;
  width: 300px;
  margin-bottom: 22px;
  overflow: hidden;
}
.services-text {
  margin-left: 18px;
}
.services-text p{
  hyphens: auto;
  text-align: justify;
  font-size: 12px;
  line-height: 22px;
  color: #767e9e;
  font-weight: 400;
  margin: 8px 0;
}
.services-inner > p {
  font-size: 18px;
  line-height: 30px;
  color: #767e9e;
  letter-spacing: -0.1px;
}
.services-text h3 {
  font-size: 18px;
  line-height: 18px;
  color: #666d89;
  font-weight: 900;
}

/*Singolo2*/
.portfolio {
  width: 100%;
  background-color: #2d303a;
  height: 863px;
  border-bottom: 6px solid #323746;
}
.portfolio-inner {
  width: 1020px;
  margin: auto;
  padding: 60px 40px 0 40px;
  box-sizing: border-box;
}
.portfolio h2 {
  color: #666d89
}
.portfolio-inner>p {
  font-size: 18px;
  line-height: 30px;
  color: #767e9e;
  font-weight: 300;
  margin-bottom: 10px;
}
.tags a {
  font-size: 12px;
  line-height: 22px;
  font-weight: 400;
  border: 1px solid #767e9e;
  padding: 2px 6px;
  text-decoration: none;
  color: #767e9e;
  border-radius: 5px;
  margin: 0 3px;
}
.tags a:first-child {
  margin-left: 1px;
  margin-right: 5px;
}
.tags a:hover {
  border-color: #ffffff;
  color: #ffffff;
}
.portf-images {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-height: 630px;
  overflow-y: hidden;
  margin-top: -1px;
}
.portf-image {
  width: 220px;
  height: 187px;
  background-color: #464b5e;
  margin-top: 20px;
}

.about-us {
  width: 100%;
  background-color: #f2f2f2;
  height: 728px;
  border-bottom: 6px solid #ffffff;
}
.about-us-inner {
  width: 1020px;
  margin: auto;
  padding: 60px 40px 0 40px;
  box-sizing: border-box;
}
.about-us-inner>p {
  font-size: 18px;
  line-height: 30px;
  color: #767e9e;
  font-weight: 300;
  margin-bottom: 10px;
  text-align: justify;
}
.team {
  display: flex;
  margin-top: 44px;
  justify-content: space-between;
}
.person {
  width: 300px;
}
.person:first-child p {
  letter-spacing: -0.06px;
}
.person h3 {
  font-size: 18px;
  color: #666d89;
  font-weight: 900;
  letter-spacing: -0.2px;
  margin-top: 12px;
  overflow: hidden;
  white-space: nowrap;
}
.person p {
  font-size: 12px;
  line-height: 21px;
  color: #767e9e;
  font-weight: 400;
  text-align: justify;
  margin-top: 8px;
}
.social {
  display: flex;
}
.social a {
  padding: 5.5px;
  border-radius: 50%;
  border: 1px solid #666d89;
  width: 19px;
  text-align: center;
  margin-top: 12px;
  margin-right: 8px;
}
.social a:nth-child(3) img {
  margin-bottom: 1px;
}
.social a:hover {
  padding: 3.5px;
  border: 3px solid #666d89;
}
.person:first-child .social{
  margin-left: 1px;
}
.person:nth-child(2)>img {
  margin-left: -1px
}

/*Singolo3*/
.feedback {
  background-color: #f06c64;
  border-bottom: 6px solid #ea676b;
}
.feedback-inner {
  width: 1020px;
  height: 648px;
  margin: auto;
  box-sizing: border-box;
  padding: 60px 40px 0px;
}
.feedback h2 {
  color: #f0d8d9;
}
.about {
  font-size: 18px;
  line-height: 30px;
  color: #f0d8d9;
  letter-spacing: 0px;
  font-weight: 300;
  text-align: left;
}
.about::first-line {
  letter-spacing: 0.15px;
}
.form-wrapper {
  display: flex;
  justify-content: space-between;
}
#feedback-form {
  width: 619px;
}
.feedback-contact {
  width: 300px;
  margin-top: 23px;
}
fieldset {
  margin: 0;
  margin-top: 26px;
  padding: 0;
  border: 0;
}
fieldset input {
  box-sizing: border-box;
  margin-bottom: 17px;
  padding: 6px 15px 9px;
  border: 0;
  width: 100%;
  font-size: 12px;
  line-height: 22px;
  color: #f0d8d9;
  font-weight: 300;
  text-align: left;
  border-radius: 5px;
  background-color:  #d6564f;
  letter-spacing: -0.2px;
}
fieldset input:focus, #form-submit:hover {
  background-color:  #ae453f;
  color: #ffffff;
}
#form-message {
  padding-bottom: 172px
}
#form-submit {
  width: auto;
  cursor: pointer;
}
.feedback-contact h3 {
  font-size: 18px;
  color: #f0d8d9;
  font-weight: 900;
  text-align: left;
  margin-bottom: -5px;
}
.feedback-contact p {
  margin-bottom: 20px
}
.feedback-contact p, .feedback-contact a{
  font-size: 12px;
  line-height: 22px;
  color: #f0d8d9;
  font-weight: 400;
  text-align: justify;
  letter-spacing: -0.1px;
}
.feedback-contact a {
  text-decoration: none;
  color: #f0d8d9;
  display: block;
  padding-left: 23px;
  background-position: left center;
  margin-bottom: -0.4px;
  letter-spacing: 0px;
}
.contact-location {
  background: url("assets/location.png") no-repeat;
  background-position-x: 3px !important;
}
.contact-phone {
  background: url("assets/phone.png") no-repeat;
}
.contact-email {
  background: url("assets/mail.png") no-repeat;
  background-position-y: 7.5px !important;
}
/*Footer*/
footer {
  height: 76px;
  background-color: #2d303a;
}
.footer-inner {
  width: 1020px;
  margin: auto;
  box-sizing: border-box;
  padding: 10px 40px;
  display: flex;
  justify-content: space-between;
}
.copyright {
  color: #666d89;
  font-size: 12px;
  margin-top: 20px;
  margin-left: 2.5px;
  letter-spacing: -0.2px;
}
.footer-inner .social a {
  margin-right: 0px;
  margin-left: 8px
}

